fixed button alignment for ff

--- a/html/css/main.css
+++ b/html/css/main.css
@@ -373,22 +373,21 @@ a.active:hover + .nav-underbar {
     width: 100%;
     height: 54px;
     bottom: 100px;
+    
+    text-align: center;
 }
 
 .mover-button {
     position: absolute;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    display: contents;
 
     width: 250px;
     height: 50px;
 
     left: 50%;
-    transform: translateX(-50%);
+    top: 50%;
+    transform: translate(-50%, -50%);
     text-align: center;
-
-    transition: .2s linear;
 }
 
 .button-brackets {
@@ -398,8 +397,13 @@ a.active:hover + .nav-underbar {
     justify-content: center;
     
     left: 50%;
-    transform: translateX(-50%);
-    text-align: center;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.button-txt {
+    position: relative;
+    bottom: 5px;
 }
 
 .mover-link {
